force-app/main/default/objects/Deductible_Factor__c/Deductible_Factor__c.object-meta.xml
<CustomObject>
    <label>Deductible Factor</label>
    <nameField>
        <label>Deductible Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deductible Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>