force-app/main/default/objects/Deductible_Factor__c/fields/Deductible_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Deductible_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Deductible External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>