force-app/main/default/objects/Deductible_Factor__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <formula>Master_Factor__r.From_Date__c</formula>
    <label>From Date</label>
    <type>Date</type>
</CustomField>