force-app/main/default/objects/Deductible_Factor__c/fields/Master_Factor__c.field-meta.xml
<CustomField>
    <fullName>Master_Factor__c</fullName>
    <label>Master Factor</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Master_Factor__c.Factor_Type__c</field>
            <operation>equals</operation>
            <value>Deductible</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Factor__c</referenceTo>
    <relationshipLabel>Deductible Factors</relationshipLabel>
    <relationshipName>Deductible_Factors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>