force-app/main/default/objects/Deductible_Factor__c/fields/Name_Integer_Value__c.field-meta.xml
<CustomField>
    <fullName>Name_Integer_Value__c</fullName>
    <formula>Value(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Integer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>