force-app/main/default/objects/Deductible_Factor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deductible_Amount__c</columns>
    <columns>Deductible_External_ID__c</columns>
    <columns>Master_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>